2017-09-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Comparison functions for date class

2017-09-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Version check function

2017-09-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Additional exchange rates source (mycurrency.net with over 100 additional currencies)
	* Enhanced equation solving

2017-09-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* abs() and sgn() enhancements

2017-09-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* cbrt() and root() now always returns real root

2017-08-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix solving of (a+x)/(b+x)=c

2017-08-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Duplicate the RPN register at the top, instead of pushing zeroes, on RPN enter with empty expression (fixes qalculate-gtk issue #22)
	* Implementation of all R algorithms in percentile function
	* Use a formula for exponentiation with a complex power that preserves precision better

2017-08-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix inconsistent parsing - x^22x=x^22*x, x^2x=x^(2*x) (now x^2x=x^2*x)
	* Do not round exact integers in EXP_NONE/"Simple" mode (its only annoying)

2017-08-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Remove duplicate history entries in qalc
	* Fix factorization issues

2017-08-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Precision variable

2017-08-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix sum(x/x,0,10) and avoid warning for sum(x/x,1,10), and similar
	* Unicode ellipsis
	* Return zero for plot()

2017-08-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Enable plotting on Windows (gnuplot must be installed separately)
	* Support middle dot (00B7) as multiplication sign

2017-08-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Ability to apply functions with multiple arguments to the rpn stack (including using the whole stack for functions with a vector as argument)