@@ -180,20 +180,29 @@ static const long int SQUARE_PRIMES[] = {
 
 #define LARGEST_RAISED_PRIME_EXPONENT 10
 
-static const long int RAISED_PRIMES[][27] = {
+static const long int RAISED_PRIMES[][49] = {
 {8L, 27L, 125L, 343L, 1331L, 2197, 4913, 6859, 12167L, 24389L,
 29791L, 50653L, 68921L, 79507L, 103823L, 148877L, 205379L, 226981L, 300763L, 357911L,
-389017L, 493039L, 571787L, 704969L, 912673L, 1030301L, 0},
+389017L, 493039L, 571787L, 704969L, 912673L, 1030301L, 1092727L, 1225043L, 1295029, 1442897,
+2048383L, 2248091L, 2571353L, 2685619L, 3307949L, 3442951L, 3869893L, 4330747L, 4657463L, 5177717L,
+5735339L, 5929741L, 6967871L, 7189057L, 7645373L, 7880599L, 9393931L, 11089567L, 0},
 {16L, 81L, 625L, 2401L, 14641L, 28561L, 83521L, 130321L, 279841L, 707281L, 
-923521L, 1874161L, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0},
-{32L, 243L, 3125L, 16807L, 161051L, 371293L, 1419857L, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0},
-{64L, 729L, 15625L, 117649L, 1771561L, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0},
-{128L, 2187L, 78125L, 823543L, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0},
-{256L, 6561L, 390625L, 5764801L, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0},
-{512L, 19683L, 1953125L, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0},
-{1024L, 59049L, 9765625L, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0}
+923521L, 1874161L, 2825761L, 3418801L, 4879681L, 7890481L, 12117361L,
+0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0},
+{32L, 243L, 3125L, 16807L, 161051L, 371293L, 1419857L, 2476099L, 6436343L, 20511149L,
+0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0},
+{64L, 729L, 15625L, 117649L, 1771561L, 4826809L, 24137569L, 47045881L, 148035889L,
+0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0},
+{128L, 2187L, 78125L, 823543L, 19487171L, 62748517L, 410338673L,
+0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0},
+{256L, 6561L, 390625L, 5764801L, 214358881L, 815730721L,
+0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0},
+{512L, 19683L, 1953125L, 40353607L,
+0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0},
+{1024L, 59049L, 9765625L, 282475249L,
+0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0}
 };
-
+ 
 /// The result of a comparison of two values
 typedef enum {
 	COMPARISON_RESULT_EQUAL,
@@ -620,8 +629,8 @@ extern Calculator *calculator;
 #define SIGN_POWER_1			"¹"
 #define SIGN_POWER_2			"²"
 #define SIGN_POWER_3			"³"
-#define SIGN_POWER_4			"³"
-#define SIGN_POWER_5			"⁴"
+#define SIGN_POWER_4			"⁴"
+#define SIGN_POWER_5			"⁵"
 #define SIGN_POWER_6			"⁶"
 #define SIGN_POWER_7			"⁷"
 #define SIGN_POWER_8			"⁸"
